[tool.poetry]
name = "csv-to-xlsx"
version = "0.2.1"
description = ""
authors = ["Nils Golembiewski <nilsgolembiewski@techonomy.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.15"
openpyxl = "^3.1.2"
click = "^8.1.7"
xlsxwriter = "^3.2.0"
xlsx2csv = "^0.8.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[tool.poetry.scripts]
csv-to-xlsx="csv_to_xlsx.cli:csv_to_xlsx"
xlsx-to-csv="csv_to_xlsx.cli:xlsx_to_csv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
