[tool.poetry]
name = "csv-to-xlsx"
version = "1.0.0"
description = ""
authors = ["Nils Golembiewski <nilsgolembiewski@techonomy.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
xlsxwriter = "^3.2.0"
xlsx2csv = "^0.8.3"
fastexcel = "^0.11.6"
polars = "^1.8.2"
joblib = "^1.4.2"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[tool.poetry.scripts]
csv-to-xlsx="csv_to_xlsx.cli:csv_to_xlsx"
xlsx-to-csv="csv_to_xlsx.cli:xlsx_to_csv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
